<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_padding_16dp"
    tools:context="com.example.android.sneakerinventory.EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:fontFamily="sans-serif-medium"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_padding_4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_sneaker_name"
                style="@style/EditorFieldStyle"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_sneaker_name"
                android:inputType="textCapWords" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_sneaker_price"
                    style="@style/EditorFieldStyle"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/hint_sneaker_price"
                    android:inputType="number" />

                <!-- Units for price ($) -->
                <TextView
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_sneaker_price" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Camera Button to insert image from Gallery -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_padding_16dp">

        <ImageView
            android:id="@+id/button_camera"
            android:layout_width="@dimen/circle_dimensions"
            android:layout_height="@dimen/circle_dimensions"
            android:src="@drawable/circle" />

        <ImageView
            android:id="@+id/editor_image"
            android:layout_width="@dimen/camera_iv_dimensions"
            android:layout_height="@dimen/camera_iv_dimensions"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_camera" />

    </RelativeLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:fontFamily="sans-serif-medium"
            android:text="@string/category_supplier" />

        <Button
            android:id="@+id/button_decrement"
            style="@style/quantity_button"
            android:text="@string/editor_decrement" />

        <!-- Quantity field -->
        <EditText
            android:id="@+id/edit_sneaker_quantity"
            style="@style/QuantityFieldStyle"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_sneaker_quantity"
            android:inputType="number" />

        <Button
            android:id="@+id/button_increment"
            style="@style/quantity_button"
            android:text="@string/editor_increment" />

    </LinearLayout>

    <!-- Order from Supplier -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_button" />

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_sneaker_email"
            style="@style/EmailFieldStyle"
            android:layout_marginLeft="@dimen/margin_padding_32dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>
</LinearLayout>
